service.yaml
apiVersion: v1
kind: Service 
metadata: 
  name: write-svc 
  annotations:
    cloud.google.com/neg: '{"ingress": true}'
spec:
  type: NodePort
  ports: 
    - targetPort: 8080
      port: 8080
      nodePort: 30001
  selector:
    app: writefreely

---

apiVersion: v1
kind: Service 
metadata: 
  name: writedb-svc 
  labels:
    app: writedb
spec:
  clusterIP: None 
  ports: 
    - port: 3306
      # nodePort: 30001
  selector:
    app: writedb
